SP (spring): implement credit card endpoints
