# api-spring/src/main/java/com/finankal/api/dto/CreateCreditCardResponseDto.java
@@ -1,0 +1,9 @@
+package com.finankal.api.dto;
+
+import lombok.Data;
+
+@Data
+public class CreateCreditCardResponseDto {
+    private String creditCardId;
+}
+
