# api-spring/src/main/java/com/finankal/api/dto/PayCreditCardStatementResponseDto.java
@@ -1,0 +1,9 @@
+package com.finankal.api.dto;
+
+import lombok.Data;
+
+@Data
+public class PayCreditCardStatementResponseDto {
+    private String transactionId;
+}
+
