# api-spring/src/main/java/com/finankal/api/dto/RecordCreditCardTransactionResponseDto.java
@@ -1,0 +1,9 @@
+package com.finankal.api.dto;
+
+import lombok.Data;
+
+@Data
+public class RecordCreditCardTransactionResponseDto {
+    private String transactionId;
+}
+
